force-app/main/default/objects/Invoice__c/fields/Related_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>