force-app/main/default/objects/Invoice__c/fields/Related_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>