force-app/main/default/objects/Invoice__c/fields/Related_to_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specifies the Product to which the Item of Invoice is related with.</inlineHelpText>
    <label>Related to Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>