force-app/main/default/objects/Invoice__c/fields/Sales_Tax_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Formula__c</fullName>
    <formula>if( RecordType.DeveloperName = &apos;Web_Invoices&apos;,  Web_Invoice_Sales_Tax__c , IF(!ISBLANK(Sum_Taxable_Line_Items__c),(Sum_Taxable_Line_Items__c -   Discount_With_Promocode__c  )*  Sales_TaxPer__c   ,0.00 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Evaluates the respective Sales Tax Amount on Taxable Line Items</inlineHelpText>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>