force-app/main/default/objects/Invoice__c/fields/Sales_Tax_percent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_percent__c</fullName>
    <label>Sales Tax (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>