force-app/main/default/objects/Invoice__c/fields/Sales_TaxPer__c.field-meta.xml
<CustomField>
    <fullName>Sales_TaxPer__c</fullName>
    <formula>Sales_TaxPer_Backend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>