force-app/main/default/objects/Invoice__c/fields/Sales_TaxPer_Backend__c.field-meta.xml
<CustomField>
    <fullName>Sales_TaxPer_Backend__c</fullName>
    <label>Sales Tax(%) Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>