force-app/main/default/objects/Invoice__c/fields/SendInvoiceToQB__c.field-meta.xml
<CustomField>
    <fullName>SendInvoiceToQB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendInvoiceToQB</label>
    <type>Checkbox</type>
</CustomField>