force-app/main/default/objects/Invoice__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship To</label>
    <type>TextArea</type>
</CustomField>