force-app/main/default/objects/Invoice__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Related_to_Contact__r.Account.ShippingStreet &amp; &quot; &quot; &amp;
 Related_to_Contact__r.Account.ShippingCity  &amp; &quot; &quot; &amp;
 Related_to_Contact__r.Account.ShippingState &amp; &quot; &quot; &amp; Related_to_Contact__r.Account.ShippingPostalCode &amp; &quot; &quot; &amp; 
 Related_to_Contact__r.Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>