force-app/main/default/objects/Invoice__c/fields/Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost__c</fullName>
    <inlineHelpText>This field will hold the amount, dealers are spending on the shipping of the invoice.</inlineHelpText>
    <label>Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>