force-app/main/default/objects/Invoice__c/fields/Shopify_Status__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Status__c</fullName>
    <label>Shopify Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>