force-app/main/default/objects/Invoice__c/fields/Sold_Boat_Account__c.field-meta.xml
<CustomField>
    <fullName>Sold_Boat_Account__c</fullName>
    <label>Sold Boat Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4011 NB Supra</fullName>
            </value>
            <value>
                <fullName>4012 NB Moomba</fullName>
            </value>
            <value>
                <fullName>4700 Used Boat Sale</fullName>
            </value>
            <value>
                <fullName>4750 Consignment Boat Sale</fullName>
            </value>
            <value>
                <fullName>4770 Wholesale Boat Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>