force-app/main/default/objects/Invoice__c/fields/Sold_Boat_Location__c.field-meta.xml
<CustomField>
    <fullName>Sold_Boat_Location__c</fullName>
    <label>Sold Boat Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STWS</fullName>
            </value>
            <value>
                <fullName>STWS-RDU</fullName>
            </value>
            <value>
                <fullName>STWS Augusta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>