force-app/main/default/objects/Invoice__c/fields/Sold_Boat_Payment__c.field-meta.xml
<CustomField>
    <fullName>Sold_Boat_Payment__c</fullName>
    <label>Sold Boat Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>