force-app/main/default/objects/Invoice__c/fields/Sold_By_Ref__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>