force-app/main/default/objects/Invoice__c/fields/Sold_Location__c.field-meta.xml
<CustomField>
    <fullName>Sold_Location__c</fullName>
    <label>Sold Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STWS Charlotte</fullName>
            </value>
            <value>
                <fullName>STWS RDU</fullName>
            </value>
            <value>
                <fullName>STWS Augusta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>