force-app/main/default/objects/Invoice__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IF( ISBLANK( Shopify_Id__c ) ,&quot;Offline&quot;, &quot;Online&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>