force-app/main/default/objects/Invoice__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Specifies the Taxable State of the Customer.</description>
    <inlineHelpText>Specifies the Taxable State of the Customer.</inlineHelpText>
    <label>Taxable State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>