force-app/main/default/objects/Invoice__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>South Carolina</fullName>
            </value>
            <value>
                <fullName>North Carolina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>