force-app/main/default/objects/Invoice__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <label>Store Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Store_Location</valueSetName>
    </valueSet>
</CustomField>