force-app/main/default/objects/Invoice__c/fields/Sum_Discount_Availed_on_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Sum_Discount_Availed_on_Line_Items__c</fullName>
    <inlineHelpText>Specifies the Sum of all the Discounts availed on  the Line Items of the Product.</inlineHelpText>
    <label>Sum - Discount Availed on Line Items</label>
    <summarizedField>Invoice_Line_Item__c.Discount_Price__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>