force-app/main/default/objects/Invoice__c/fields/Sum_Price_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Sum_Price_Line_Items__c</fullName>
    <inlineHelpText>Specifies the Sum of Prices of All the Line Items under the Invoice</inlineHelpText>
    <label>Sum - Price Line Items</label>
    <summarizedField>Invoice_Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>