force-app/main/default/objects/Invoice__c/fields/Sum_Taxable_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Sum_Taxable_Line_Items__c</fullName>
    <inlineHelpText>Roll up Summary : Sum of Grand Total of all the Taxable Line Items</inlineHelpText>
    <label>Sum : Taxable Line Items</label>
    <summarizedField>Invoice_Line_Item__c.Grand_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Taxable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>