force-app/main/default/objects/Invoice__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>