force-app/main/default/objects/Invoice__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>10 Years</fullName>
            </value>
            <value>
                <fullName>12 Years</fullName>
            </value>
            <value>
                <fullName>15 Years</fullName>
            </value>
            <value>
                <fullName>20 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>