force-app/main/default/objects/Invoice__c/fields/Total_Amount_Financed__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Financed__c</fullName>
    <formula>Total_Price_Formula__c -  Down_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Calculated By Subtracting the Down Payment from Total Price</inlineHelpText>
    <label>Total Amount Financed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>