force-app/main/default/objects/Invoice__c/fields/Total_Amount_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_on_Invoice__c</fullName>
    <formula>Sum_Non_Taxable_Line_Items__c +  Sum_Taxable_Line_Items__c +  Sales_Tax_Formula__c + Shipping_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the Total Amount on Invoice by adding the Sum of Taxable and Non Taxable Line Items along with the Sales Tax.</inlineHelpText>
    <label>Total Amount on Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>