force-app/main/default/objects/Invoice__c/fields/Total_Due_After_Promo__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_After_Promo__c</fullName>
    <formula>Payment__c -  Discount_With_Promocode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Due After Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>