force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Discount__c</fullName>
    <description>Specifies the Discount availed on the product.</description>
    <inlineHelpText>Specifies the Discount availed on the product.</inlineHelpText>
    <label>Total Invoice Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>