force-app/main/default/objects/Invoice__c/fields/Total_Labor__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor__c</fullName>
    <label>Total Labor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>