force-app/main/default/objects/Invoice__c/fields/Total_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Total_MSRP__c</fullName>
    <label>Total MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>