force-app/main/default/objects/Invoice__c/fields/Total_Over_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Total_Over_Allowance__c</fullName>
    <formula>Boat_Trade_Over_Allowance__c  +  Trailer_Allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Sum of Boat Trade Allowance and Trailer Trade Allowance</inlineHelpText>
    <label>Total Over Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>