force-app/main/default/objects/Invoice__c/fields/Total_Part_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Part_Cost__c</fullName>
    <label>Total Part Cost</label>
    <summarizedField>Invoice_Line_Item__c.Total_Dealer_Cost_Per_LI__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>