force-app/main/default/objects/Invoice__c/fields/Total_Parts__c.field-meta.xml
<CustomField>
    <fullName>Total_Parts__c</fullName>
    <inlineHelpText>Roll-up Summary: Count of all the Parts available in Invoice Line Items.</inlineHelpText>
    <label>Total Parts</label>
    <summarizedField>Invoice_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>