force-app/main/default/objects/Invoice__c/fields/Total_Parts_MSRP_ILI__c.field-meta.xml
<CustomField>
    <fullName>Total_Parts_MSRP_ILI__c</fullName>
    <label>Total Parts MSRP (ILI)</label>
    <summarizedField>Invoice_Line_Item__c.Part_Cost__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>