force-app/main/default/objects/Invoice__c/fields/Total_Payment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Formula__c</fullName>
    <inlineHelpText>Roll-up Formula</inlineHelpText>
    <label>Total Payment</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment__c.Related_to_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>