force-app/main/default/objects/Invoice__c/fields/Total_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Formula__c</fullName>
    <formula>Net_Selling_Price_Formula__c +  Boat_Sales_Tax_Formula__c +  Trailer_Sales_Tax__c  +  Boat_Reg_Fee__c +   Trailer_Reg_Fee__c   + Doc_Fee__c  + Quote_Trade_Payoff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula</inlineHelpText>
    <label>Total Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>