force-app/main/default/objects/Invoice__c/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <formula>Total_Parts_MSRP_ILI__c - Total_Part_Cost__c + Shipping_Charge__c -  Shipping_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>