force-app/main/default/objects/Invoice__c/fields/Total_Quantity_ILI__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_ILI__c</fullName>
    <label>Total Quantity (ILI)</label>
    <summarizedField>Invoice_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>