force-app/main/default/objects/Invoice__c/fields/Trade_ACV__c.field-meta.xml
<CustomField>
    <fullName>Trade_ACV__c</fullName>
    <formula>ACV_Form__r.Approved_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Comes From ACV Form object&apos;s Approved ACV field.</inlineHelpText>
    <label>Trade ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>