force-app/main/default/objects/Invoice__c/fields/Trade_In_Actual_Pay_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Actual_Pay_Off_Date__c</fullName>
    <label>Trade In Actual Pay Off Date</label>
    <type>Date</type>
</CustomField>