force-app/main/default/objects/Invoice__c/fields/Trade_in_Bank_Pay_off__c.field-meta.xml
<CustomField>
    <fullName>Trade_in_Bank_Pay_off__c</fullName>
    <label>Trade in Bank Pay-off</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank of the West</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>USSA</fullName>
            </value>
            <value>
                <fullName>BB&amp;T</fullName>
            </value>
            <value>
                <fullName>Huntington Bank</fullName>
            </value>
            <value>
                <fullName>Aqua</fullName>
            </value>
            <value>
                <fullName>Founders Credit Union</fullName>
            </value>
            <value>
                <fullName>Merrick Bank</fullName>
            </value>
            <value>
                <fullName>Marathon Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>