force-app/main/default/objects/Invoice__c/fields/Trade_In_Boat_Pay_off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Boat_Pay_off_Amount__c</fullName>
    <description>This is the amount to pay off for the trade in boat</description>
    <label>Trade In Boat Pay-off Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>