force-app/main/default/objects/Invoice__c/fields/Trade_In_Pay_Off_Bank__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Pay_Off_Bank__c</fullName>
    <label>Trade In Pay-Off Bank</label>
    <length>30</length>
    <type>Text</type>
</CustomField>