force-app/main/default/objects/Invoice__c/fields/Trade_In_Pay_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Pay_Off_Date__c</fullName>
    <label>Trade In Pay-Off Date</label>
    <type>DateTime</type>
</CustomField>