force-app/main/default/objects/Invoice__c/fields/Trade_Pay_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trade_Pay_Off_Amount__c</fullName>
    <label>Trade Pay Off Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>