force-app/main/default/objects/Invoice__c/fields/Trailer_ACV__c.field-meta.xml
<CustomField>
    <fullName>Trailer_ACV__c</fullName>
    <label>Trailer ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>