force-app/main/default/objects/Invoice__c/fields/Trailer_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Allowance__c</fullName>
    <label>Trailer Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>