force-app/main/default/objects/Invoice__c/fields/Trailer_Reg_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Reg_Fee__c</fullName>
    <label>Trailer Reg Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>