force-app/main/default/objects/Invoice__c/fields/Trailer_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Sales_Tax__c</fullName>
    <label>Trailer Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>