force-app/main/default/objects/Invoice__c/fields/Trailer_Trade_Over_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Trade_Over_Allowance__c</fullName>
    <formula>IF( Trailer_ACV__c  &lt;  Trailer_Allowance__c ,Trailer_Allowance__c- Trailer_ACV__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Calculated by subtracting Trailer ACV from Trailer Allowance.</inlineHelpText>
    <label>Trailer Trade Over Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>