force-app/main/default/objects/Invoice__c/fields/Tyre_Tax__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Tax__c</fullName>
    <label>Tyre Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>