force-app/main/default/objects/Invoice__c/fields/Web_Invoice_Response__c.field-meta.xml
<CustomField>
    <fullName>Web_Invoice_Response__c</fullName>
    <label>Web Invoice Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>