force-app/main/default/objects/Invoice__c/fields/Web_Invoice_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Web_Invoice_Sales_Tax__c</fullName>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>