force-app/main/default/objects/Invoice__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <label>Web Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Woocommerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>