force-app/main/default/objects/Invoice__c/fields/Woocommerce_Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Woocommerce_Customer_Notes__c</fullName>
    <label>Customer Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>