force-app/main/default/objects/Invoice__c/fields/Woocommerce_Id__c.field-meta.xml
<CustomField>
    <fullName>Woocommerce_Id__c</fullName>
    <externalId>true</externalId>
    <label>Woocommerce Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>