force-app/main/default/objects/Invoice__c/fields/Woocommerce_Status__c.field-meta.xml
<CustomField>
    <fullName>Woocommerce_Status__c</fullName>
    <label>Woocommerce Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>processing</fullName>
            </value>
            <value>
                <fullName>on-hold</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>refunded</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>