force-app/main/default/objects/Invoice__c/fields/Your_Price__c.field-meta.xml
<CustomField>
    <fullName>Your_Price__c</fullName>
    <formula>IF((  Total_Price__c  +  MSRP_Trailer_Price__c )&gt;  Discount_on_Invoice__c ,(Total_Price__c + MSRP_Trailer_Price__c) - Discount_on_Invoice__c,(Total_Price__c + MSRP_Trailer_Price__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Calculated by deducting the Discount Price from the sum of Total Price and MSRP Trailer Price.</inlineHelpText>
    <label>Your Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>