force-app/main/default/objects/Invoice__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Specifies the Zip Code of the Customer&apos;s Mailing Address.</description>
    <inlineHelpText>Specifies the Zip Code of the Customer&apos;s Mailing Address.</inlineHelpText>
    <label>Zip Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>