force-app/main/default/objects/Invoice__c/recordTypes/Sold_Boat_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Sold_Boat_Invoice</fullName>
    <active>true</active>
    <label>Sold Boat Invoice</label>
</RecordType>