force-app/main/default/objects/Invoice__c/recordTypes/Standard_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Standard_Invoice</fullName>
    <active>true</active>
    <label>Standard Invoice</label>
</RecordType>