force-app/main/default/objects/Invoice__c/recordTypes/Web_Invoices.recordType-meta.xml
<RecordType>
    <fullName>Web_Invoices</fullName>
    <active>true</active>
    <label>Web Invoices</label>
</RecordType>