force-app/main/default/objects/Invoice__c/validationRules/Refunded_Amount_only_on_Refund.validationRule-meta.xml
<ValidationRule>
    <fullName>Refunded_Amount_only_on_Refund</fullName>
    <active>false</active>
    <description>Refunded Amount must be specified only when Refunded checkbox is checked.</description>
    <errorConditionFormula>AND( 
Refunded_Amount__c &gt;0.00 , 
 Refunded__c == false)</errorConditionFormula>
    <errorDisplayField>Refunded_Amount__c</errorDisplayField>
    <errorMessage>Refunded Amount must be specified only when Refunded checkbox is checked.</errorMessage>
</ValidationRule>