force-app/main/default/objects/Invoice__c/validationRules/Specify_Refunded_Amount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Refunded_Amount_Rule</fullName>
    <active>true</active>
    <description>Refunded Amount must be specified if the Refunded checkbox is set to True.</description>
    <errorConditionFormula>AND(Refunded__c == true , ISBLANK( Refunded_Amount__c ))</errorConditionFormula>
    <errorDisplayField>Refunded_Amount__c</errorDisplayField>
    <errorMessage>Refunded Amount must be specified if the Refunded checkbox is set to True.</errorMessage>
</ValidationRule>